[package]
name = "decan"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.7"
decan-macros = { path = "../decan-macros" }

[target."cfg(unix)".dependencies]
libc = "0.2.168"

[dev-dependencies]
decan-testlib = { path = "../decan-testlib" }

[features]
variadic_32 = []

[[test]]
name = "symbol_group"
